--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 ---
-title       : "Data Science Capstone:\n NLP App Pitch"
-subtitle    : "January 4th, 2020"
+title       : "Data Science Capstone: NLP App Pitch"
+subtitle    : "January 4, 2020"
 author      : "xubRAw (GH)"
 job         : 
 framework   : io2012        # {io2012, html5slides, shower, dzslides, ...}
